# Awesome-Workflow

./: .gitignore  README.md
.claude/: codex-review-on-change.mjs  settings.json
configs/docker/: run.sh  ubuntu22.04-cuda13.Dockerfile
git/: README.md
gpu/: README.md  alloc_gpus.py  srun_bash_monitor.py
shell/: README.md  example.sh  example2.sh  setup.sh  ubuntu22.04-cuda13-arm64.zshrc
slack/claude-slack-bridge/: .env.example  .gitignore  README.md  bridge.py  bridge.sbatch  keepalive.sh  run.sh  slack-app-manifest.yaml  test_node.sh  test_sdk.py
slack/codex-slack-bridge/: .env.example  .gitignore  README.md  bridge.py  bridge.sbatch  bridge_core.py  codex_runner.py  keepalive.sh  pyproject.toml  run.sh  slack-app-manifest.json  slack-app-manifest.yaml  test_node.sh
slack/codex-slack-bridge/scripts/: check.sh  install.sh  run-once.sh  runtime-path.sh
slack/codex-slack-bridge/tests/: test_bridge.py  test_bridge_core.py  test_codex_runner.py
utils/: download_google_drive_large.sh  gpu_watchdog.sh  send_email.py  url-logger
