[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-slack-bridge"
version = "0.1.0"
description = "Single-user Slack DM bridge for persistent local Codex CLI sessions"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9,<4",
  "slack-bolt>=1.21,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-asyncio>=0.23,<2",
  "ruff>=0.9",
]

[tool.setuptools]
py-modules = ["bridge", "bridge_core", "codex_runner"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "__pycache__",
  "*.egg-info",
  "state",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
